--- a/Deneme_proje/Views/Shared/_Layout.cshtml
+++ b/Deneme_proje/Views/Shared/_Layout.cshtml
@@ -201,7 +201,7 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                             <!-- item-->
-                            <a class="dropdown-item" href="#"><i class="mdi mdi-face-profile font-size-16 align-middle me-1"></i> Profile</a>
+                            <a class="dropdown-item" href="/Profil/"><i class="mdi mdi-face-profile font-size-16 align-middle me-1"></i> Profile</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/Login/logout"><i class="mdi mdi-logout font-size-16 align-middle me-1"></i> Logout</a>
                         </div>
@@ -585,7 +585,7 @@
                                             <ul class="sub-menu" aria-expanded="false">
                                                 @if (MenuHelper.KullaniciYetkisiVarMi("Fatura", "IsEmirleri", userNo))
                                                 {
-                                                    <li><a href="/Fatura/IsEmirleri">Aktif İş Emirleri Yönetmi</a></li>
+                                                    <li><a href="/Fatura/IsEmirleri">Barkod Basım</a></li>
                                                 }
                                                 @if (MenuHelper.KullaniciYetkisiVarMi("Fatura", "IsEmriDurumu", userNo))
                                                 {
