--- a/Deneme_proje/Views/Shared/_Layout.cshtml
+++ b/Deneme_proje/Views/Shared/_Layout.cshtml
@@ -616,8 +616,29 @@
                                 </ul>
                             </li>
                         }
-
-
+                         <li>
+                                <a href="javascript: void(0);" class="has-arrow waves-effect">
+                                    <i class="mdi mdi-account-group"></i>
+                                    <span>Dbt Aktarım</span>
+                                </a>
+                                <ul class="sub-menu" aria-expanded="false">
+                                  
+                                        <li>
+                                            <a href="javascript: void(0);" class="has-arrow waves-effect">
+                                                <i class="mdi mdi-account-group"></i>
+                                                <span>Aktarım</span>
+                                            </a>
+                                            <ul class="sub-menu" aria-expanded="false">
+                                               
+                                                    <li><a href="/Aktarim/Index">Ercom Aktarım</a></li>
+                                                
+                                              
+                                                   
+                                                
+                                            </ul>
+                                        </li>
+</ul>
+</li>
                         @* CRM Menüsü *@
                         @if (MenuHelper.KullaniciYetkisiVarMi("CRM", "DashBoard", userNo) ||
                         MenuHelper.KullaniciYetkisiVarMi("CRM", "Firsatlar", userNo) ||
